added scrollable function

--- a/index.html
+++ b/index.html
@@ -37,25 +37,49 @@
             <input id="goodmama" type="number" onchange="addItem('goodmama')" />
             <br />
             <label for="">Spaghetti (#400)</label>
-            <input id="spaghetti" type="number" onchange="addItem('spaghetti')"/>
+            <input
+              id="spaghetti"
+              type="number"
+              onchange="addItem('spaghetti')"
+            />
             <br />
             <label for=""> Bournvita (#1650)</label>
-            <input id="bournvita" type="number" onchange="addItem('bournvita')"/>
+            <input
+              id="bournvita"
+              type="number"
+              onchange="addItem('bournvita')"
+            />
             <br />
             <label for=""> Sharwarma (#1000)</label>
-            <input id="sharwarma type="number" onchange="addItem('sharwarma')"/>
+            <input
+              id="sharwarma"
+              type="number"
+              onchange="addItem('sharwarma')"
+            />
             <br />
             <label for="smallchops"> Small chops (#650)</label>
-            <input id="smallchops" type="number" onchange="addItem('smallchops')"/>
+            <input
+              id="smallchops"
+              type="number"
+              onchange="addItem('smallchops')"
+            />
             <br />
             <label for=""> Basmati (#6020)</label>
             <input id="basmati" type="number" onchange="addItem('basmati')" />
             <br />
             <label for=""> Poundo-flour (#2820)</label>
-            <input id="poundoflour" type="number" onchange="addItem('poundoflour')"/>
+            <input
+              id="poundoflour"
+              type="number"
+              onchange="addItem('poundoflour')"
+            />
             <br />
             <label for=""> Painting brush (#300)</label>
-            <input id="paintingbrush" type="number" onchange="addItem('paintingbrush')"/>
+            <input
+              id="paintingbrush"
+              type="number"
+              onchange="addItem('paintingbrush')"
+            />
             <br />
             <label for=""> Nivea spray (#1200)</label>
             <input id="nivea" type="number" onchange="addItem('nivea')" />
@@ -94,7 +118,6 @@
             <button class="reset">Close</button>
           </div>
         </div>
-        
       </div>
     </div>
 
